refatoração da lambda
